# location-explorer

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: settings.py  urls.py
frontend/src/: App.vue
place/: apps.py  urls.py  views.py
places/: urls.py  views.py
weather/: urls.py  views.py
